[package]
name = "recourse"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"
description = "Durability and field-improvement loop for ousia-guard verdicts"
license = "MIT"

[[bin]]
name = "recourse"
path = "src/main.rs"

[dependencies]
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = { version = "0.8", features = ["parse"] }
ulid = { version = "1", features = ["serde"] }

[dev-dependencies]
